--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.security.user.name=user
 spring.security.user.password=password
+
+#  fatal, error, warn, info, debug, trace - poziomy logowania
+logging.level.root=info
