add properties for jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.security.user.password=password
 
 #  fatal, error, warn, info, debug, trace - poziomy logowania
 logging.level.root=info
+
+spring.datasource.url = jdbc:h2:file:~/homework-Spring
+spring.jpa.hibernate.ddl-auto = update
