--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.security.user.name=user
-spring.security.user.password=password
+spring.security.user.name=bartek
+spring.security.user.password=haslo123
 
 #  fatal, error, warn, info, debug, trace - poziomy logowania
 logging.level.root=info
